Signed-off-by: liugu <liuguww@qq.com>

--- a/themes/vicis/css/common.css
+++ b/themes/vicis/css/common.css
@@ -164,3 +164,20 @@ font-size: 18px;
 	margin-top: 10px;
 	margin-bottom: 0;
 }
+
+
+/*产品详情样式*/
+
+/*.input-group {
+	border: 1px solid #e3e3e3;
+	width: 10em;
+}
+
+.input-group-addon {
+width: 2.3em;
+font-size: 1em;
+line-height: 2.3em;
+padding: 0;
+border-radius: 0;
+border: none;
+}*/
