--- a/themes/vicis/css/menu-css.css
+++ b/themes/vicis/css/menu-css.css
@@ -1,6 +1,6 @@
 ﻿
 .menu ul li {display:block;padding-top:2px; padding-bottom: 5px;padding-left: 0; margin-bottom:5px;list-style:none;overflow:visible;}
-.menu ul li a {display:block;height:26px;margin-top:0px;padding-top:10px;font-size:14px;outline:none;}
+.menu ul li a {display:block;height:38px;margin-top:0px;padding-top:10px;padding-bottom:25px;font-size:14px;outline:none;}
 .menu ul li .active {background: #f3f3f3 url(../images/common/drop-downTextBg.png) right -34px no-repeat;}
 .menu a:hover {
 text-decoration: none;
