--- a/themes/vicis/css/style.css
+++ b/themes/vicis/css/style.css
@@ -380,7 +380,7 @@ input.shoppingCartProductNumber {
 	line-height: 24px;
 }
 .shoppingCartButtonsWrapper {
-	height: 36px;
+	/*height: 36px;*/
 	padding-bottom: 24px;
 	padding-top: 24px;
 	border-top: 3px solid rgba(0,0,0,0.12);
@@ -1874,7 +1874,7 @@ input.fieldHasError, textarea.fieldHasError {
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .drop-downWrapper {
 	width: 100%;
-	height: 36px;
+	/*height: 36px;*/
 	overflow: visible;
 	margin-bottom: 27px;
 }
@@ -2045,3 +2045,22 @@ font-weight: normal;
 	padding: 10px;
 	text-align: center;
 }
+
+
+.l-good-num  input {
+	margin: 0;
+}
+
+.l-numlabel {
+	line-height: 29px;
+}
+
+code {
+ color: #666; 
+}
+
+
+input[type=radio], input[type=checkbox] {
+display: none;
+}
+
